tests: fix JdbcClientMetadataProvisioningTest.createdByPadsTo36Chars with mysql

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     - ./mysql:/docker-entrypoint-initdb.d/
     environment:
     - MYSQL_ROOT_PASSWORD=changeme
+    command:
+      - --sql_mode=ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION,PAD_CHAR_TO_FULL_LENGTH
   openldap:
     image: docker.io/bitnami/openldap:2.6
     ports:
