Downgrade MySQL to avoid padding issues
Test that fail: JdbcApprovalStoreTests.deleteProviderDeletesApprovals
Why:
 - Table users has column id char(30)
 - Table authz_approvals has column user_id varchar(30)

These two don't match when joining in a query

Suspect: https://dev.mysql.com/worklog/task/?id=12129

--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=changeme
   mysql:
-    image: "mysql:8"
+    image: "mysql:5.7.44-oraclelinux7"
     ports:
     - 3306:3306
     volumes:
